# PanVis

./: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml
app/: GenerateSVG.hs  Main.hs  XMLTemplate.hs  convis.glade  generateSVG.hs
panvis/: .gitignore  LICENSE  README.md  package.yaml  panvis.cabal
src/: AesonUtil.hs  ApiAccess.hs  ApiDataManager.hs  ApiDistrict.hs  ApiHistoryData.hs  DataStructure.hs  GUIData.hs  History.hs  HistoryQuote.hs  Lib.hs  Util.hs
src/DataRetrieval/: AesonUtil.hs  ApiAccess.hs  ApiDataManager.hs  ApiDistrict.hs  ApiHistoryData.hs  HistoryUpdate.hs
test/: TestApiAccess.hs
