name:                panvis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab2.cip.ifi.lmu.de/meierk/visualisierung-von-coronadaten
license:             BSD3
license-file:        LICENSE
author:              Korbinian Meier, Leonard Ganz, Pierre Franke
copyright:           2022 Korbinian Meier, Leonard Ganz, Pierre Franke
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable panvis
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
